--- a/index.html
+++ b/index.html
@@ -28,12 +28,19 @@
 									 data-charset="iso-8859-15">
 								</section>
 
-								<section data-markdown="reading.md"
-									 data-separator="^\n\n\n"
-									 data-separator-vertical="^\n\n"
-									 data-separator-notes="^Note:"
-									 data-charset="iso-8859-15">
-								</section>
+                <section data-markdown="randori.md"
+                   data-separator="^\n\n\n"
+                   data-separator-vertical="^\n\n"
+                   data-separator-notes="^Note:"
+                   data-charset="iso-8859-15">
+                </section>
+
+                <section data-markdown="reading.md"
+                   data-separator="^\n\n\n"
+                   data-separator-vertical="^\n\n"
+                   data-separator-notes="^Note:"
+                   data-charset="iso-8859-15">
+                </section>
 
             </div>
         </div>
